Update ConversationsService.java